--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
     "@types/prop-types": "^15.5.2",
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
+    "ace-builds": "^1.4.12",
     "antd": "^3.26.17",
     "axios": "^0.19.0",
     "bootstrap": "^3.3.7",
-    "brace": "^0.11.0",
     "classnames": "^2.2.6",
     "d3": "^3.5.17",
     "debug": "^3.1.0",
@@ -68,7 +68,7 @@
     "prop-types": "^15.6.1",
     "query-string": "^6.9.0",
     "react": "^16.8.3",
-    "react-ace": "^6.1.0",
+    "react-ace": "^9.1.1",
     "react-dom": "^16.8.3",
     "react-grid-layout": "^0.18.2",
     "react-resizable": "^1.10.1",
