--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ pyparsing==2.3.0
 SQLAlchemy-Utils==0.34.2
 sqlparse==0.3.0
 statsd==3.3.0
-gunicorn==19.9.0
+gunicorn==20.0.4
 rq==1.1.0
 rq-scheduler==0.9.1
 jsonschema==3.1.1
@@ -55,6 +55,7 @@ maxminddb-geolite2==2018.703
 pypd==1.1.0
 disposable-email-domains>=0.0.52
 gevent==1.4.0
+eventlet==0.25.2
 sshtunnel==0.1.5
 supervisor==4.1.0
 supervisor_checks==0.8.1
