Add TypeScript support (#5027)
* TASK Add typescript dependencies to package.json

* TASK Add typescript to build process and npm scripts and TASK Move example components to typescript and add an example definition file.

* TASK Move back to ts-loader instead of babel typescript preset

* FIX Remove unnecessary changes

* FIX Explicitly mention tsconfig file in webpack.config.js to avoid `error while parsing tsconfig.json, The 'files' list in config file 'tsconfig.json' is empty`
See (https://github.com/TypeStrong/ts-loader/issues/405#issuecomment-330108362)

* FIX Move tsconfig to client subdirectory to make it accessible in docker container (only webpack.config.js is copied over from root folder in Dockerfile)

* TASK Move from ts-loader to babel to reduce compatibility issues between ES6/7 and typescript compilation.

* TASK Add types for classnames, hoist-non-react-statics and lodash. Fix default export of DashboardList and run prettier on eslintrc

* Run npm install

* Trigger tests

* Run npm install 2

* Trigger tests

--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "webpack-dev-server": "webpack-dev-server",
     "analyze": "npm run clean && BUNDLE_ANALYZER=on webpack",
     "analyze:build": "npm run clean && NODE_ENV=production BUNDLE_ANALYZER=on webpack",
-    "lint": "npm run lint:base  -- --ext .js --ext .jsx ./client",
-    "lint:fix": "npm run lint:base  -- --fix --ext .js --ext .jsx ./client",
+    "lint": "npm run lint:base -- --ext .js --ext .jsx --ext .ts --ext .tsx ./client",
+    "lint:fix": "npm run lint:base  -- --fix --ext .js --ext .jsx --ext .ts --ext .tsx ./client",
     "lint:base": "eslint --config ./client/.eslintrc.js --ignore-path ./client/.eslintignore",
     "lint:ci": "npm run lint -- --max-warnings 0 --format junit --output-file /tmp/test-results/eslint/results.xml",
-    "prettier": "prettier --write 'client/app/**/*.{js,jsx}' 'client/cypress/**/*.js'",
-    "test": "TZ=Africa/Khartoum jest",
+    "prettier": "prettier --write 'client/app/**/*.{js,jsx,ts,tsx}' 'client/cypress/**/*.{js,jsx,ts,tsx}'",
+    "type-check": "tsc --noEmit --project client/tsconfig.json",
+    "type-check:watch": "npm run type-check -- --watch",
+    "jest": "TZ=Africa/Khartoum jest",
+    "test": "run-s type-check jest",
     "test:watch": "jest --watch",
     "cypress:install": "npm install --no-save cypress@~4.5.0 @percy/agent@0.26.2 @percy/cypress@^2.2.0 atob@2.1.2",
     "cypress": "node client/cypress/cypress.js",
@@ -43,9 +46,6 @@
   "homepage": "https://redash.io/",
   "dependencies": {
     "@redash/viz": "file:viz-lib",
-    "@types/prop-types": "^15.5.2",
-    "@types/react": "^16.3.13",
-    "@types/react-dom": "^16.0.5",
     "ace-builds": "^1.4.12",
     "antd": "^3.26.17",
     "axios": "^0.19.0",
@@ -78,11 +78,19 @@
     "use-media": "^1.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/cli": "^7.10.4",
+    "@babel/core": "^7.10.4",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-transform-object-assign": "^7.2.0",
-    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.10.4",
+    "@types/classnames": "^2.2.10",
+    "@types/hoist-non-react-statics": "^3.3.1",
+    "@types/lodash": "^4.14.157",
+    "@types/prop-types": "^15.7.3",
+    "@types/react": "^16.9.41",
+    "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
     "babel-eslint": "^10.0.3",
@@ -122,6 +130,7 @@
     "raw-loader": "^0.5.1",
     "react-test-renderer": "^16.5.2",
     "request": "^2.88.0",
+    "typescript": "^3.9.6",
     "url-loader": "^1.1.2",
     "webpack": "^4.20.2",
     "webpack-build-notifier": "^0.1.30",
