--- a/client/.babelrc
+++ b/client/.babelrc
@@ -7,7 +7,8 @@
       ],
       "useBuiltIns": "usage"
     }],
-    "@babel/preset-react"
+    "@babel/preset-react",
+    "@babel/preset-typescript"
   ],
   "plugins": [
     "@babel/plugin-proposal-class-properties",
